# pet_projects

./: README.md
favourite_projects/c++/rpg_games_oop/: CMakeLists.txt
favourite_projects/c++/rpg_games_oop/include/: Computer_game.h  RPG.h  RPG_narrative.h  RPG_with_open_world.h  Strategy.h  Strategy_RTS.h  Strategy_TBS.h  general.h  list_game.h
favourite_projects/c++/rpg_games_oop/source/: Computer_game.cpp  RPG.cpp  RPG_narrative.cpp  RPG_with_open_world.cpp  Strategy.cpp  Strategy_RTS.cpp  Strategy_TBS.cpp  general.cpp  list_game.cpp  main.cpp
favourite_projects/c++/tetris/src/: Tetramino.cpp  Tetramino.h  functions.cpp  functions.h  main.cpp
favourite_projects/html_js/new_year/: index.html  main.js  styles.css
favourite_projects/html_js/new_year_witcher/: index.html  main.js  styles.css
favourite_projects/html_js/transhumanism/: index.html
favourite_projects/html_js/transhumanism/css/: slider.css  styles.css
favourite_projects/html_js/transhumanism/js/: main.js  slider.js
simple_labs/html_js/favourite_games/: index.html  styles.css
simple_labs/html_js/html_lab/: catalog.html  gold-item.html  gold.html  index.html  styles-catalog.css  styles-gold.css  styles-item.css  styles.css
simple_labs/html_js/js_lab/: date_and_calc.js  index.html  strings.js  styles.css  копия, резерв.js
simple_labs/php/links_search/: index.php
simple_labs/php/news_site/: config.php  functions.php  index.php
simple_labs/php/news_site/templates/pages/: head.tpl  (+2 more)
simple_labs/php/parse_img_to_pdf/: config.php  index.php
simple_labs/php/parse_img_to_pdf/tpls/: main.tpl
(+77 files in other folders)
